# fastapi_playground

./: Dockerfile  LICENSE  auth.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
