[tool.poetry]
name = "fastapi-playground"
version = "0.1.0"
description = "Just learning fastapi"
authors = ["Johannes Alneberg"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.0.post1"
fastapi = "^0.109.2"
python-jose = "^3.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"